// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders feed skeleton if loading 1`] = `
<Connect(ApollosPullToRefreshWithoutData)
  handleRefresh={[Function]}
>
  <Left
    scroll={true}
  >
    <section
      className="background--light-secondary soft-half@palm soft@palm-wide-and-up soft-double@anchored"
    >
      <div
        className="grid"
      >
        <div
          className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored"
          key="0"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored"
          key="1"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored"
          key="2"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored"
          key="3"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored"
          key="4"
        >
          <FeedItemSkeleton />
        </div>
      </div>
    </section>
  </Left>
</Connect(ApollosPullToRefreshWithoutData)>
`;

exports[`renders with props 1`] = `
<Connect(ApollosPullToRefreshWithoutData)
  handleRefresh={[Function]}
>
  <Left
    scroll={true}
  >
    <section
      className="background--light-secondary soft-half@palm soft@palm-wide-and-up soft-double@anchored"
    >
      <div
        className="grid"
      >
        <div
          className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored"
          key="0"
        >
          <Connect(Apollo(LikesWrapper))
            item={
              Object {
                "channelName": "articles",
                "content": Object {
                  "images": Array [
                    Object {
                      "fileLabel": "1:1",
                      "url": "http://test.com/1x1.jpg",
                    },
                  ],
                },
                "entryId": "1",
              }
            }
          />
        </div>
        <div
          className="grid__item one-half@palm-wide-and-up flush-bottom@palm push-half-bottom@palm-wide push-bottom@portable push-bottom@anchored"
          key="1"
        >
          <Connect(Apollo(LikesWrapper))
            item={
              Object {
                "channelName": "articles",
                "content": Object {
                  "images": Array [
                    Object {
                      "fileLabel": "1:1",
                      "url": "http://test.com/1x1.jpg",
                    },
                  ],
                },
                "entryId": "2",
              }
            }
          />
        </div>
      </div>
    </section>
  </Left>
</Connect(ApollosPullToRefreshWithoutData)>
`;
